Same as last commit - attempting to fix error on mobile where project home page will scroll unitentionally when a project is selected

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -64,7 +64,6 @@ small {
 .project-overlay--active {
   bottom: 0;
   transition-delay: 0s;
-  position: fixed;
 }
 
 @media only screen and (min-width: 50rem) {
